--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,12 @@ dist
 .svelte-kit
 
 # End of https://www.toptal.com/developers/gitignore/api/node
+
+
+# REMIX
+/.cache
+/build
+/public/build
+
+/prisma/dev.db
+.env
