--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "postinstall": "remix setup node",
     "start": "remix-serve build"
   },
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "^3.9.1",
     "@remix-run/react": "^1.1.3",
@@ -21,6 +24,7 @@
     "@remix-run/dev": "^1.1.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "esbuild-register": "^3.3.2",
     "prisma": "^3.9.1",
     "typescript": "^4.1.2"
   },
